--- a/VLDBJ/app-basic.tex
+++ b/VLDBJ/app-basic.tex
@@ -1,4 +1,4 @@
-\section{Details of Basic Solutions}
+\section{Basic Solutions for ACQ}
 \label{app:basic}
 
 Algorithms~\ref{alg:basic-g} and~\ref{alg:basic-w} present {\tt basic-g} and {\tt basic-w} respectively.
