--- a/VLDBJ/conclude.tex
+++ b/VLDBJ/conclude.tex
@@ -1,7 +1,8 @@
 \section{Conclusions}
 \label{conclusion}
 
-An AC is a community that exhibits structure and keyword cohesiveness. To facilitate ACQ evaluation, we develop the CL-tree index and its query algorithms. Our experimental results show that ACs are
+An AC is a community that exhibits structure and keyword cohesiveness. To facilitate ACQ evaluation, we develop the CL-tree index and its query algorithms. We further propose index maintenance algorithms for dynamic graphs and define two typical variants of the ACQ problems.
+Our experimental results show that ACs are
 easier to interpret than those of existing community detection/search methods,
 and they can be ``personalized''. Our solutions are also faster than existing community search algorithms.
 
